@@ -220,6 +220,9 @@ BUGFIXES:
   ZOOKEEPER-2329: Clear javac and javadoc warning from zookeeper
   (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-2330: ZooKeeper close API does not close Login thread
+  (Arshad Mohammad via rgs)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)  
 
